--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/dist/output.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./Assets/imgs/home.svg" type="image/x-icon">
     <title>HOMEYOU</title>
 </head>
 
