--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
 
         <!-- SEGUNDA PAGINA -->
-        <section class="flex flex-col items-center mt-10 gap-5 p-5 md:flex-row md:justify-center md:pb-24">
+        <section class="flex flex-col items-center mt-10 gap-5 p-5 md:flex-row md:justify-around md:pb-24">
 
             <article class="hidden md:flex items-center relative md:w-1/3" >
                 <img class="z-0 " src="../Assets/imgs/sombra.png" alt="">
